--- a/index.html
+++ b/index.html
@@ -59,13 +59,22 @@ document.getElementById('file').addEventListener('change',e=>{
 
 // ---- MOTOR DE ASISTENCIA ----
 function analizarDia(horasTxt){
- let horas=horasTxt.split(/\n|\r/).map(limpiarHora).filter(x=>x).map(toMin).sort((a,b)=>a-b);
+ let horas=horasTxt.split(/
+|
+/).map(limpiarHora).filter(x=>x).map(toMin).sort((a,b)=>a-b);
  if(!horas.length) return null;
 
  const ENTRADA = horas.filter(h=>dentro(h,390,510))[0]||null; //06:30-08:30
  const SAL_ALM = horas.filter(h=>dentro(h,720,810)).slice(-1)[0]||null; //12:00-13:30
  const ENT_ALM = horas.filter(h=>dentro(h,810,870) && (SAL_ALM==null||h>=SAL_ALM))[0]||null; //13:30-14:30
  const SALIDA = horas.filter(h=>h>=870).slice(-1)[0]||null; //>=14:30
+
+ // --- FALTA TOTAL DEL DIA ---
+ // Si no hay entrada válida pero sí hay marcas de tarde -> 480 min
+ if(ENTRADA==null && SALIDA!=null){
+  function fmt(m){ if(m==null) return ''; let h=Math.floor(m/60),mi=m%60; return String(h).padStart(2,'0')+":"+String(mi).padStart(2,'0'); }
+  return [fmt(ENTRADA),fmt(SAL_ALM),fmt(ENT_ALM),fmt(SALIDA),480];
+ }
 
  let perdida=0;
 
