--- a/index.html
+++ b/index.html
@@ -2,145 +2,188 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Control Biométrico Inteligente</title>
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+<title>UGEL 03 TNO - Izamiento</title>
+
 <style>
-body{font-family:Segoe UI,Arial;margin:20px;background:#f4f6f8}
-h2{margin-bottom:5px}
-small{color:#555}
-button{padding:10px 16px;margin:6px;border:none;background:#1976d2;color:white;border-radius:8px;cursor:pointer;font-weight:600}
-button:hover{background:#125aa0}
-table{border-collapse:collapse;width:100%;margin-top:15px;background:white}
-th,td{border:1px solid #ccc;padding:7px;text-align:center}
-th{background:#1976d2;color:white}
-.card{background:white;padding:14px;border-radius:10px;box-shadow:0 2px 6px rgba(0,0,0,.1);margin-bottom:15px}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background:#eef2f7;
+    text-align:center;
+    margin:0;
+}
+header{
+    background:#003366;
+    color:white;
+    padding:20px;
+    font-size:30px;
+    font-weight:bold;
+}
+.caja{
+    width:85%;
+    margin:auto;
+    background:white;
+    padding:20px;
+    margin-top:20px;
+    border-radius:12px;
+    box-shadow:0px 4px 15px rgba(0,0,0,0.15);
+}
+.turno{
+    font-size:55px;
+    color:#c40000;
+    font-weight:bold;
+}
+.fecha{
+    font-size:24px;
+}
+textarea{
+    width:90%;
+    height:120px;
+    margin-top:10px;
+    font-size:16px;
+}
+input[type=password]{
+    padding:8px;
+    font-size:16px;
+}
+button{
+    padding:10px 20px;
+    margin:10px;
+    background:#003366;
+    color:white;
+    border:none;
+    border-radius:6px;
+    cursor:pointer;
+}
+button:hover{background:#0050a0;}
+.comunicado{
+    background:#fff6bf;
+    padding:10px;
+    margin-top:10px;
+    border-radius:8px;
+    text-align:left;
+    font-size:18px;
+}
+.oculto{display:none;}
+.tv textarea,.tv button,.tv #login{display:none;}
+.tv .turno{font-size:90px;}
 </style>
 </head>
-<body>
-<h2>Control Biométrico Automático</h2>
-<small>El sistema detecta correctamente múltiples marcaciones y calcula minutos no trabajados.</small>
 
-<div class="card">
-<input type="file" id="file" accept=".xlsx,.xls"><br>
-<button onclick="verMarcaciones()">📅 Ver días procesados</button>
-<button onclick="resumen()">📊 Resumen por persona</button>
-<button onclick="exportar()">⬇ Exportar Excel por trabajador</button>
+<body>
+
+<header>UGEL 03 TNO</header>
+
+<div class="caja">
+    <div class="fecha" id="fecha">Cargando fecha...</div>
+    <h2>Responsable del Izamiento de Bandera</h2>
+    <div class="turno" id="turno">Calculando...</div>
 </div>
 
-<div id="tabla"></div>
+<div class="caja" id="login">
+    <h2>Acceso Administrativo</h2>
+    <input type="password" id="clave" placeholder="Ingrese contraseña">
+    <button onclick="login()">Ingresar</button>
+</div>
+
+<div class="caja oculto" id="editor">
+    <h2>Publicar Comunicado</h2>
+    <textarea id="mensaje"></textarea><br>
+    <button onclick="guardarComunicado()">Publicar</button>
+    <button onclick="borrarComunicados()">Borrar Todo</button>
+</div>
+
+<div class="caja">
+    <h2>Comunicados Institucionales</h2>
+    <div id="lista"></div>
+</div>
 
 <script>
-let datos=[];
 
-// ---- UTILIDADES ----
-function limpiarHora(txt){
- if(!txt) return null;
- txt=txt.toString().trim();
- const m=txt.match(/(\d{1,2}):(\d{2})(?::\d{2})?/);
- if(!m) return null;
- return String(m[1]).padStart(2,'0')+":"+m[2];
+// activar modo TV
+if(location.search.includes("tv")){
+    document.body.classList.add("tv");
 }
 
-function toMin(h){ if(!h) return null; const[a,b]=h.split(':'); return a*60+ +b; }
+// contraseña
+const PASSWORD="ugel03";
 
-function dentro(h,a,b){ if(h==null) return false; return h>=a && h<=b; }
+// AREAS
+const areas=["DIRECCION","ADMINISTRACION","AGP","AGI"];
+const fechaBase=new Date("2026-02-16");
 
-// ---- LECTURA ----
-document.getElementById('file').addEventListener('change',e=>{
- const reader=new FileReader();
- reader.onload=ev=>{
-  const wb=XLSX.read(ev.target.result,{type:'binary'});
-  const ws=wb.Sheets[wb.SheetNames[0]];
-  datos=XLSX.utils.sheet_to_json(ws,{defval:""});
-  alert('Archivo cargado correctamente');
- };
- reader.readAsBinaryString(e.target.files[0]);
-});
-
-// ---- MOTOR DE ASISTENCIA ----
-function analizarDia(horasTxt){
- let horas=horasTxt.split(/
-|
-/).map(limpiarHora).filter(x=>x).map(toMin).sort((a,b)=>a-b);
- if(!horas.length) return null;
-
- const ENTRADA = horas.filter(h=>dentro(h,390,510))[0]||null; //06:30-08:30
- const SAL_ALM = horas.filter(h=>dentro(h,720,810)).slice(-1)[0]||null; //12:00-13:30
- const ENT_ALM = horas.filter(h=>dentro(h,810,870) && (SAL_ALM==null||h>=SAL_ALM))[0]||null; //13:30-14:30
- const SALIDA = horas.filter(h=>h>=870).slice(-1)[0]||null; //>=14:30
-
- // --- FALTA TOTAL DEL DIA ---
- // Si no hay entrada válida pero sí hay marcas de tarde -> 480 min
- if(ENTRADA==null && SALIDA!=null){
-  function fmt(m){ if(m==null) return ''; let h=Math.floor(m/60),mi=m%60; return String(h).padStart(2,'0')+":"+String(mi).padStart(2,'0'); }
-  return [fmt(ENTRADA),fmt(SAL_ALM),fmt(ENT_ALM),fmt(SALIDA),480];
- }
-
- let perdida=0;
-
- // tardanza
- if(ENTRADA!=null && ENTRADA>450) perdida+=ENTRADA-450;
-
- // mañana
- if(SAL_ALM!=null && SAL_ALM<780) perdida+=780-SAL_ALM;
-
- // tarde ingreso
- if(ENT_ALM!=null && ENT_ALM>840) perdida+=ENT_ALM-840;
-
- // salida temprana
- if(SALIDA!=null && SALIDA<990) perdida+=990-SALIDA;
-
- function fmt(m){ if(m==null) return ''; let h=Math.floor(m/60),mi=m%60; return String(h).padStart(2,'0')+":"+String(mi).padStart(2,'0'); }
-
- return [fmt(ENTRADA),fmt(SAL_ALM),fmt(ENT_ALM),fmt(SALIDA),perdida];
+// LOGIN
+function login(){
+    let c=document.getElementById("clave").value;
+    if(c===PASSWORD){
+        document.getElementById("editor").classList.remove("oculto");
+        document.getElementById("login").classList.add("oculto");
+    }else alert("Contraseña incorrecta");
 }
 
-function procesar(){
- let registros=[];
- if(datos.length==0) return registros;
- const cols=Object.keys(datos[0]);
- const nombreCol=cols[1];
- datos.forEach(row=>{
-  cols.slice(3).forEach((c,i)=>{
-   const r=analizarDia(row[c]);
-   if(r) registros.push([row[nombreCol],i+1,...r]);
-  });
- });
- return registros;
+// HORA PERU
+async function obtenerHoraPeru(){
+    try{
+        let r=await fetch("https://worldtimeapi.org/api/timezone/America/Lima",{cache:"no-store"});
+        let d=await r.json();
+        procesarFecha(new Date(d.datetime));
+    }catch{
+        let ahora=new Date(new Date().toLocaleString("en-US",{timeZone:"America/Lima"}));
+        procesarFecha(ahora);
+    }
 }
 
-function pintar(headers,rows){
- let html='<table><tr>'+headers.map(h=>`<th>${h}</th>`).join('')+'</tr>';
- rows.forEach(r=>html+='<tr>'+r.map(c=>`<td>${c}</td>`).join('')+'</tr>');
- html+='</table>';
- document.getElementById('tabla').innerHTML=html;
+function procesarFecha(ahora){
+    let dias=["Domingo","Lunes","Martes","Miércoles","Jueves","Viernes","Sábado"];
+    let meses=["Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre"];
+
+    document.getElementById("fecha").innerHTML=
+    dias[ahora.getDay()]+" "+ahora.getDate()+" de "+meses[ahora.getMonth()]+" "+ahora.getFullYear()+
+    " | "+ahora.toLocaleTimeString();
+
+    calcularTurno(ahora);
 }
 
-function verMarcaciones(){
- pintar(['Nombre','Dia','Entrada','Salida Alm','Entrada Alm','Salida','Min no trabajados'],procesar());
+function calcularTurno(hoy){
+    let lunesActual=new Date(hoy);
+    lunesActual.setDate(hoy.getDate()-((hoy.getDay()+6)%7));
+
+    let semanas=Math.floor((lunesActual-fechaBase)/(1000*60*60*24*7));
+    let index=(semanas+1)%areas.length;
+
+    document.getElementById("turno").innerHTML=areas[index];
 }
 
-function resumen(){
- let tot={};
- procesar().forEach(r=>tot[r[0]]=(tot[r[0]]||0)+r[6]);
- pintar(['Nombre','Total minutos'],Object.entries(tot));
+// COMUNICADOS
+function guardarComunicado(){
+    let t=document.getElementById("mensaje").value.trim();
+    if(!t)return;
+
+    let lista=JSON.parse(localStorage.getItem("comunicados")||"[]");
+    lista.unshift(t);
+    localStorage.setItem("comunicados",JSON.stringify(lista));
+    document.getElementById("mensaje").value="";
+    mostrarComunicados();
 }
 
-function exportar(){
- let r=procesar();
- if(!r.length) return alert('No hay datos');
- let wb=XLSX.utils.book_new();
- let grupos={};
- r.forEach(x=>(grupos[x[0]]=grupos[x[0]]||[]).push(x));
- Object.keys(grupos).forEach(nombre=>{
-  let ws=XLSX.utils.aoa_to_sheet([
-   ['Nombre','Dia','Entrada','Salida Alm','Entrada Alm','Salida','Min no trabajados'],
-   ...grupos[nombre]
-  ]);
-  XLSX.utils.book_append_sheet(wb,ws,nombre.substring(0,31));
- });
- XLSX.writeFile(wb,'reporte_biometrico.xlsx');
+function borrarComunicados(){
+    if(confirm("¿Borrar todos?")){
+        localStorage.removeItem("comunicados");
+        mostrarComunicados();
+    }
 }
+
+function mostrarComunicados(){
+    let lista=JSON.parse(localStorage.getItem("comunicados")||"[]");
+    let div=document.getElementById("lista");
+    div.innerHTML="";
+    lista.forEach(m=>div.innerHTML+=`<div class="comunicado">${m}</div>`);
+}
+
+mostrarComunicados();
+obtenerHoraPeru();
+setInterval(obtenerHoraPeru,60000);
+
 </script>
+
 </body>
 </html>
